--- a/WalletWatcher/Base.lproj/Main.storyboard
+++ b/WalletWatcher/Base.lproj/Main.storyboard
@@ -303,7 +303,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1e0-0n-pSP" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="rhy-2I-gXG" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1168.8" y="2310.4947526236883"/>
+            <point key="canvasLocation" x="2262" y="778"/>
         </scene>
         <!--Create Budget Modal View Controller-->
         <scene sceneID="T8c-Yf-l1V">
